fix: ensure text remains visible during webfont load

--- a/source/css/_fonts.styl
+++ b/source/css/_fonts.styl
@@ -41,6 +41,7 @@
   font-family: 'Roboto Serif';
   font-style: normal;
   font-weight: 200;
+  font-display: swap;
   src: local(''),
        url('../fonts/roboto-serif-v8-latin-200.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('../fonts/roboto-serif-v8-latin-200.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -50,6 +51,7 @@
   font-family: 'Roboto Serif';
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: local(''),
        url('../fonts/roboto-serif-v8-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('../fonts/roboto-serif-v8-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -59,6 +61,7 @@
   font-family: 'Roboto Serif';
   font-style: normal;
   font-weight: 700;
+  font-display: swap;
   src: local(''),
        url('../fonts/roboto-serif-v8-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('../fonts/roboto-serif-v8-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -68,6 +71,7 @@
   font-family: 'Roboto Serif';
   font-style: italic;
   font-weight: 200;
+  font-display: swap;
   src: local(''),
        url('../fonts/roboto-serif-v8-latin-200italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('../fonts/roboto-serif-v8-latin-200italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -77,6 +81,7 @@
   font-family: 'Roboto Serif';
   font-style: italic;
   font-weight: 400;
+  font-display: swap;
   src: local(''),
        url('../fonts/roboto-serif-v8-latin-italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('../fonts/roboto-serif-v8-latin-italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -86,6 +91,7 @@
   font-family: 'Roboto Serif';
   font-style: italic;
   font-weight: 700;
+  font-display: swap;
   src: local(''),
        url('../fonts/roboto-serif-v8-latin-700italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('../fonts/roboto-serif-v8-latin-700italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
